Created car class and implemented a static + dynamic initialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # CMake version
 cmake_minimum_required(VERSION 3.0)
 
-set(myproject "C++ Project")
+set(myproject "Homework")
 # Project name
 project(${myproject})
 
