--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,5 @@ else()
 endif()    
 
 # Define the executable
-add_executable(${PROJECT_NAME} src/main.cpp)      
-include_directories(src)
+add_subdirectory(src)
+add_executable(${PROJECT_NAME} main.cpp)  
