--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ endif()
 
 # Define the executable
 add_subdirectory(src)
-add_executable(${PROJECT_NAME} main.cpp)  
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries("${PROJECT_NAME}" PRIVATE dto)
