Updated CMakeList.txt file, added class Driver, added new functionality using unique_ptr for driver and shared_ptr for cars and proved basic usage of mutex

--- a/src/dto/CMakeLists.txt
+++ b/src/dto/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(
     dto
     src/vehicle.cpp
     src/car.cpp
+    src/driver.cpp
 )
 
 target_include_directories(dto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
