Added Lock class for resource management

--- a/src/dto/CMakeLists.txt
+++ b/src/dto/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(
     src/vehicle.cpp
     src/car.cpp
     src/driver.cpp
+    src/lock.cpp
 )
 
 target_include_directories(dto PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
